--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.7",
+    "babel-plugin-inline-react-svg": "^1.1.2",
     "next": "10.0.5",
     "next-images": "^1.6.2",
     "react": "17.0.1",
