--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
+    "no-use-before-define": ["error", {"functions": false, "classes": false}],
     "prettier/prettier": "error",
     "space-before-function-paren": "off",
     "react/prop-types": "off"
