--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "next-images": "^1.6.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.2.0",
     "react-switch": "^6.0.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.21",
     "@types/react": "^17.0.0",
+    "@types/react-icons": "^3.0.0",
     "typescript": "^4.1.3"
   }
 }
